fix buttons in "notp-found" screen on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -135,6 +135,12 @@ button.btn-light {
   // font-size: 1.5rem;
   vertical-align: middle;
 
+  @include media-breakpoint-up(md){
+    & {
+        @include button-size($input-btn-padding-y-lg, $input-btn-padding-x-lg, $font-size-lg, $line-height-lg, $btn-border-radius-lg);
+    }
+  }
+
   // -webkit-transition: background .2s ease-in-out, color .2s ease-in-out;
   // -moz-transition: background .2s ease-in-out, color .2s ease-in-out;
   // transition: background .2s ease-in-out, color .2s ease-in-out;
